Fixes and updates

--- a/main.css
+++ b/main.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
 
+
+
+
 /*
 * ! Reset the web page
 */
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -18,6 +22,8 @@
     --myColor : rgb(0, 117, 226);
     --myColorHeadings :rgb(0, 0, 0);
     --myColorContent : rgb(95, 95, 95);
+    --myColorWhite: rgb(255, 255, 255);
+    
 }
 
 .loader{
@@ -39,7 +45,8 @@
 .header{
     display: flex;
     margin-top: 30px;
-    justify-content: center;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 
@@ -49,11 +56,10 @@
 */
  .image{
     margin-top:20px ;
-    margin-left: 10px;
     border-radius: 50%;
     background: url("img/Thapelo\ Professional-01.jpeg");
-    width: 115px;
-    height: 115px;
+    width: 90px;
+    height: 90px;
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
@@ -66,7 +72,7 @@
 
 .contant h1{
     margin-top: 25px;
-    margin-left: 15px;
+    margin-left: 10px;
     color: var(--myColorHeadings);
     font-size: 30px;
 }
@@ -86,19 +92,27 @@
 */
 .contact-info{
     display: flex;
-    gap: 24px;
+    gap: 5px;
     align-items: center;
-    margin-left: 50px;
+    margin-left: 20px;
     margin-top: 25px;
 }
+
+
 
 .bi-phone, .bi-envelope-fill, .bi-linkedin, .car{
 
     color: var(--myColor) ;
-    font-size: 25px;
-    margin-left: 3px;
+    font-size: 20px;
 
 }
+
+
+img, .car{
+    margin-left: 15px;
+    margin-right: 13px;
+}
+
 .text,a{
     text-decoration: none;
     list-style: none;
@@ -127,15 +141,15 @@
   .contact-info1{
     margin-left: 54px;
     display: flex;
+    margin-left: 20px;
     margin-top: 15px;
-    align-items: center;
-    gap: 15px;
-
+    gap: 5px;
+    align-items: baseline;
   }
   
 
 /*
-*  contact-info Style
+*  divder Style
 */
   .divder{
     border-top: 3px solid var(--myColor);
@@ -209,12 +223,14 @@ footer{
     height: 180px;
     width: 100%;
     background-color: var(--myColor);
+
 }
 
-footer{
-    color: var(--myColorHeadings);
-    color: rgb(0, 255, 0);
-} 
+
+#link, .bi-telephone, .bi-envelope{
+    color: var(--myColorWhite);
+    font-size: 20px;
+}
 
 .contact-me{
     font-size: 11px;
@@ -229,4 +245,46 @@ footer{
 p,.fa-copyright{
     text-align: center;
     margin-top: 10px;
+}
+
+
+/*
+*  Media Queries For Tablet
+*/
+
+@media screen and (min-width: 768px) and (max-width:1023px) {
+
+    .header{
+        display: flex;
+        align-items:initial;
+        margin-top: 30px;
+    }
+
+    .image{
+        width: 290px ;
+        height: 290px ;
+        margin-right: 20px;
+    }
+
+    #name{
+        margin-top: 50px;
+        font-size: 40px;
+    }
+    #course-heading{
+        font-size: 30px;
+        line-height: 50px;
+    }
+
+    .contact-info{
+        margin-top: 0;
+        margin-left: 42%;
+    }
+
+    .contact-info1{
+        margin-top: 0;
+        margin-left: 42%;
+    }
+
+
+    
 }
